2013-07-25  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/57639
	* interface.c (compare_parameter): Check for class_ok.
	* simplify.c (gfc_simplify_same_type_as): Ditto.

2013-07-23   Ondřej Bílka  <neleai@seznam.cz>

	* decl.c: Fix comment typos.
	* interface.c: Likewise.
	* trans-array.c: Likewise.
	* trans.c: Likewise.

2013-07-22  Tobias Burnus  <burnus@net-b.de>

	PR fortran/57906
	PR fortran/52052
	* class.c (gfc_build_class_symbol): Set coarray_comp.
	* trans-array.c (structure_alloc_comps): For coarrays,
	directly use the data pointer address.

2013-07-22  Chang  <pchang9@cs.wisc.edu>

	* trans-decl.c (gfc_build_dummy_array_decl): Exit loop after
	setting PACKED_PARTIAL.

2013-07-22  Tobias Burnus  <burnus@net-b.de>

	* trans-array.c (gfc_array_allocate): Correct memory-leak patch.

2013-07-22  Tobias Burnus  <burnus@net-b.de>

	* trans-array.c (gfc_array_allocate,
	gfc_trans_deferred_array): Plug memory leak.

2013-07-21  Ondřej Bílka  <neleai@seznam.cz>

	* trans-decl.c: Fix comment typos.
	* trans-expr.c: Ditto.

2013-07-21  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/56937
	* dependency.c (gfc_dep_resolver):  Treat identical
	array subscripts as identical; don't unconditionally
	return a dependency if an array subscript is found.

2013-07-21  Tobias Burnus  <burnus@net-b.de>

	PR fortran/35862
	* libgfortran.h (GFC_FPE_DOWNWARD, GFC_FPE_TONEAREST,
	GFC_FPE_TOWARDZERO, GFC_FPE_UPWARD): New defines.

2013-07-21  Tobias Burnus  <burnus@net-b.de>

	PR fortran/57894
	* check.c (min_max_args): Add keyword= check.

2013-07-17  Mikael Morin  <mikael@gcc.gnu.org>
	    Tobias Burnus  <burnus@net-b.de>

	PR fortran/57895
	* match.c (gfc_match_name): Ensure that the error
	message regarding -fdollar-ok gets printed.
	(gfc_match_common): Avoid multiple freeing.

2013-07-16  Tobias Burnus  <burnus@net-b.de>

	PR fortran/57912
	* trans-expr.c (gfc_trans_scalar_assign): Correct if
	condition for caf realloc.

2013-07-15  Tobias Burnus  <burnus@net-b.de>
