@@ -1,3 +1,8 @@
+2013-07-25  Janus Weil  <janus@gcc.gnu.org>
+
+	PR fortran/57966
+	* gfortran.dg/typebound_call_25.f90: New.
+
 2013-07-25  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	PR c++/57981
